// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when generating abstract aggregate for edfi should generate aggregate element 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"utf-8\\" ?>
<Aggregates logicalSchema=\\"Ed-Fi\\" schema=\\"edfi\\">
  <Aggregate root=\\"Entity1\\">
    <Entity table=\\"Entity2\\" isAbstract=\\"true\\"/>
  </Aggregate>
</Aggregates>
"
`;

exports[`when generating aggregate extensions should generate aggregate element 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"utf-8\\" ?>
<AggregateExtensions logicalSchema=\\"Extension\\" schema=\\"extension\\">
  <AggregateExtension root=\\"Entity1\\">
    <Entity table=\\"Entity2\\" schema=\\"extension\\"/>
  </AggregateExtension>
</AggregateExtensions>"
`;

exports[`when generating aggregate for edfi should generate aggregate element 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"utf-8\\" ?>
<Aggregates logicalSchema=\\"Ed-Fi\\" schema=\\"edfi\\">
  <Aggregate root=\\"Entity1\\">
    <Entity table=\\"Entity2\\"/>
    <Entity table=\\"Entity3\\"/>
  </Aggregate>
</Aggregates>
"
`;

exports[`when generating aggregate for extensions should generate aggregate element 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"utf-8\\" ?>
<AggregateExtensions logicalSchema=\\"Extension\\" schema=\\"extension\\">
  <Aggregate root=\\"Entity1\\">
    <Entity table=\\"Entity2\\" schema=\\"extension\\"/>
  </Aggregate>
</AggregateExtensions>"
`;

exports[`when generating aggregate with primary key update should generate aggregate element 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"utf-8\\" ?>
<Aggregates logicalSchema=\\"Ed-Fi\\" schema=\\"edfi\\">
  <Aggregate root=\\"Entity1\\" allowPrimaryKeyUpdates=\\"true\\">
    <Entity table=\\"Entity1\\"/>
  </Aggregate>
</Aggregates>
"
`;

exports[`when generating aggregate with required collection table should generate aggregate element 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"utf-8\\" ?>
<Aggregates logicalSchema=\\"Ed-Fi\\" schema=\\"edfi\\">
  <Aggregate root=\\"Entity1\\" allowPrimaryKeyUpdates=\\"true\\">
    <Entity table=\\"Entity1\\" isRequiredCollection=\\"true\\"/>
  </Aggregate>
</Aggregates>
"
`;

exports[`when generating aggregate with subclass for edfi should generate aggregate element 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"utf-8\\" ?>
<Aggregates logicalSchema=\\"Ed-Fi\\" schema=\\"edfi\\">
  <Aggregate root=\\"Entity1\\">
    <Entity table=\\"Entity2\\" isA=\\"Entity4\\"/>
  </Aggregate>
</Aggregates>
"
`;
